--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,4 +1,4 @@
-name: Laravel
+name: Laravel Deploy
 
 on:
   push:
@@ -14,6 +14,8 @@ jobs:
       with:
         php-version: '8.0'
     - uses: actions/checkout@v4
+    - name: Check directories
+      run: ls -a
     - name: Move to directory
       run: cd /var/www/laravel-miranda
     - name: Pull from repository
