--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,6 +18,8 @@ jobs:
       run: git pull
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+    - name: PHP Version
+      run: php -v
     - name: Update Composer
       run: composer update
     - name: Install Dependencies
